fix: update grid gaps

--- a/styles/outcomes.css
+++ b/styles/outcomes.css
@@ -41,10 +41,6 @@
 }
 
 @media all and (max-width: 640px) {
-  .outcomes__items {
-    gap: 20px;
-  }
-
   .outcomes__item {
     padding: 20px 25px 30px;
   }
